# techlead-cli

./: .gitignore  PRD.md  README.md  main.py  pyproject.toml  ruff.toml  skills-lock.json
.claude-plugin/: plugin.json
.claude/agents/: chip-huyen.md
commands/: tl-ask.md  tl-brief.md  tl-capture.md
plans/: techlead-cli.md
scripts/: context.py
techlead/agents/defaults/: calendar-agent.md  calendar-agent.yml  jira-agent.md  jira-agent.yml  okr-agent.md  okr-agent.yml  people-agent.md  people-agent.yml
techlead/cli/: brief.py  commands.py  cron.py  init.py  main.py
techlead/core/: alerts.py  config.py  context.py  orchestrator.py  registry.py
tests/: test_alerts.py  test_commands.py  test_config.py  test_context.py  test_registry.py  test_strategic_vision.py
